# mcp-portfolio

./: .deepsource.toml  .gitignore  .gitleaksignore  .gitmodules  .npmignore  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  SECURITY.md  docker-compose.yml  package-lock.json  package.json  pyproject.toml  sample-data.json  sonar-project.properties  vitest.config.js
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: publish-github-packages.yml
src/: index.js  portfolio-tools.js
src/mcp_portfolio_server/: __init__.py  server.py
tests/fixtures/: portfolio-data.js
tests/integration/: server-integration.test.js
tests/unit/: data-loading.test.js  get-contact-info.test.js  get-portfolio-categories.test.js  get-portfolio-item.test.js  get-tech-stack.test.js  search-portfolio.test.js
