[project]
name = "srikanth-mcp-portfolio"
version = "1.5.0"
description = "MCP server for Srikanth's portfolio data"
authors = [
    {name = "Srikanth Karthikeyan", email = "srikanthkarthi2003@gmail.com"}
]
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.8"
keywords = ["mcp", "portfolio", "data", "server"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "mcp>=1.0.0",
]

[project.urls]
Homepage = "https://github.com/srikanthkarthi/mcp-portfolio"
Repository = "https://github.com/srikanthkarthi/mcp-portfolio"
Documentation = "https://github.com/srikanthkarthi/mcp-portfolio#readme"

[project.scripts]
srikanth-mcp-portfolio = "mcp_portfolio_server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mcp_portfolio_server"]

[tool.hatch.build.targets.wheel.shared-data]
"db/portfolio-data/ai-portfolio.json" = "share/srikanth-mcp-portfolio/db/portfolio-data/ai-portfolio.json"

[tool.hatch.build.targets.sdist]
include = [
    "src/",
    "db/",
    "README.md",
    "LICENSE"
]
